--- a/_data/content/projects/ja.yml
+++ b/_data/content/projects/ja.yml
@@ -4,229 +4,160 @@
 ###########################################################
 page_data:
   main:
-    header: "プロジェクト"
-    info: "プロジェクトページの説明はこちら。"
+    header: "Projects"
+    info: "Liste de different projets."
     text_color: "white"
     # if you don't want to use background image, comment it. back_color will be activated.
-    img: ":projects-heading.jpg"
+    img: ":home-heading.jpg"
     back_color: "lightblue"
 
   category:
-    - title: "例"
-      type: id_example
+    - title: "Wrangling"
+      type: id_wrangling
       color: "gray"
-    - title: "写真"
-      type: id_picture
+    - title: "Visualization"
+      type: id_visualization
       color: "#62b462"
-    - title: "名言"
-      type: id_quote
+    - title: "Statistics"
+      type: id_statistics
       color: "#2FD0ED"
+    - title: "LaTeX"
+      type: id_latex
+      color: "#E6DC15"
+    - title: "Machine learning"
+      type: id_ml
+      color: "#3393FF"
+    - title: "BI"
+      type: id_bi
+      color: "#FF5733"
+
 
   list:
-    # example
-    - type: id_example
-      project_name: "サンプルプロジェクト"
-      project_excerpt: "例"
-      img: ":project1_thumb.jpg"
-      img_title: "img title1"
-      date: "2021-03-13"
+    # Projet 1
+    - type: id_wrangling
+      project_name: "Manipulation et prétraitement de données"
+      project_excerpt: "La manipulation et le prétraitement de données n’est sans doute pas la partie la plus fascinante de la Data Science, mais il s’agit d’une étape incontournable pour toute analyse de données."
+      img: ":data_wrangling.png"
+      img_title: "Data wrangling"
+      date: "2022-05-01"
       post: |
-        # Examples
+       # Objectifs de ce projet : 
+        - Apprendre au sujet des données manquantes
+        - Détecter des problèmes
+        - Trouvé les données aberrantes
+        - Résulats préliminaires
+        
+       ### Link
+        Ici, ce trouve le [notebook](https://fabienhaury.github.io/assets/notebook_ue1_haury_fabien.pdf), et le [rapport](https://fabienhaury.github.io/assets/rapport_ue1_haury_fabien.pdf) pour ce projet.
+        
 
-        This is an example page to display markdown related styles for Mr. Green Jekyll Theme.
-
-        ### Headings (centered)
-        {:data-align="center"}
-
-        # Heading 1
-
-        ## Heading 2
-
-        ### Heading 3
-
-        #### Heading 4
-
-        ##### Heading 5
-
-        ###### Heading 6
-
-        ***
-
-        ### Paragraphs
-
-        #### Paragraph
-
-        **William Shakespeare**, Let me not to the marriage of true minds
-        Admit impediments. Love is not love
-        Which alters when it alteration finds,
-        Or bends with the remover to remove.
-        O no, it is an ever-fixed mark
-        That looks on tempests and is never shaken;
-        It is the star to every wand'ring barque,
-        Whose worth's unknown, although his height be taken.
-        Love's not Time's fool, though rosy lips and cheeks
-        Within his bending sickle's compass come;
-        Love alters not with his brief hours and weeks,
-        But bears it out even to the edge of doom.
-        If this be error and upon me proved,
-        I never writ, nor no man ever loved.
-
-        #### Texts
-
-        Quoted text `Hello world`
-
-        Bold text **Hello world**
-
-        Italic text _Hello world_
-
-        kbd text <kbd>Hello world</kbd>
-
-        #### Blockquote
-
-        > **William Shakespeare**, Let me not to the marriage of true minds
-        Admit impediments. Love is not love
-        Which alters when it alteration finds,
-        Or bends with the remover to remove.
-        O no, it is an ever-fixed mark
-        That looks on tempests and is never shaken;
-        It is the star to every wand'ring barque,
-        Whose worth's unknown, although his height be taken.
-        Love's not Time's fool, though rosy lips and cheeks
-        Within his bending sickle's compass come;
-        Love alters not with his brief hours and weeks,
-        But bears it out even to the edge of doom.
-        If this be error and upon me proved,
-        I never writ, nor no man ever loved.
-
-        ### Link
-
-        This is [Mr. Green Jekyll Theme](https://github.com/MrGreensWorkshop/MrGreen-JekyllTheme), a simple theme built for [Jekyll](https://jekyllrb.com/).
-
-        ### Picture
-
-        ![such a lovely place](:projects-heading.jpg)
-
-        ### Picture (centered)
-
-        ![such a lovely place](:project1_thumb.jpg){:data-align="center"}
-
-        ### Lists
-
-        - Apple
-        - Banana
-        - Orange
-
-        1. Fruits
-            1. Apples
-                - Granny Smith
-                - Mutsu
-            1. Bananas
-                - Cavendish
-                - Red
-        1. Vegetables
-
-        ***
-
-        ### Tables
-
-        #### Small Table (centered)
-
-        | Fruits(not aligned) | Alignment (centered) | num (right align) |
-        | ------------------- | :------------------: | ----------------: |
-        | Apple               |       centered       |              9999 |
-        | Banana              |  centered long text  |               999 |
-        | Orange              |       centered       |                99 |
-        | Lemon               |       centered       |                 9 |
-        {:data-align="center"}
-
-        #### Wide Table (centered)
-
-        scroll enabled when page is narrow
-
-        | Fruits | num (left align) | num (right align) | num  | num  | num  |
-        | ------ | :--------------- | ----------------: | ---- | ---- | ---- |
-        | Apple  | 1111             |              1111 | 2222 | 3333 | 4444 |
-        | Banana | 111              |               111 | 222  | 333  | 444  |
-        | Orange | 11               |                11 | 22   | 33   | 44   |
-        | Lemon  | 1                |                 1 | 2    | 3    | 4    |
-        {:data-align="center"}
-
-        #### Wider Table
-
-        scroll enabled when page is narrow
-
-        | Fruits | num (left align) | num (right align) | num  | num  | num  | num  | num  | num  |
-        | ------ | :--------------- | ----------------: | ---- | ---- | ---- | ---- | ---- | ---- |
-        | Apple  | 1111             |              1111 | 2222 | 3333 | 4444 | 5555 | 6666 | 7777 |
-        | Banana | 111              |               111 | 222  | 333  | 444  | 555  | 666  | 777  |
-        | Orange | 11               |                11 | 22   | 33   | 44   | 55   | 66   | 77   |
-        | Lemon  | 1                |                 1 | 2    | 3    | 4    | 5    | 6    | 7    |
-
-        ### Code
-
-        #### Quote
-
-        ```python
-        for i in range(5, 10):
-          print(i)
-        ```
-
-    # picture
-    - type: id_picture
-      project_name: "サンプルプロジェクト"
-      project_excerpt: "写真"
-      img: ":project2_thumb.jpg"
-      img_title: "img title2"
-      date: "2021-04-23"
+# Projet 2
+    - type: id_visualization
+      project_name: "Techniques de visualisation de données"
+      project_excerpt: "Être capable de produire des figures d’une qualité irréprochable constitue l’une des qualités attendues d’un Data Analyst."
+      img: ":data_visualization.jpg"
+      img_title: "Data visualization"
+      date: "2022-06-03"
       post: |
-        # Title
-        This is project content.
+       # Objectifs de ce projet : 
+        - Démontrer des compétences pour modifier un graphique
+        - Graphique animé
+        - Données spatiales
+        
+       ### Link
+        Ici, ce trouve le [notebook](https://fabienhaury.github.io/assets/notebook_ue2_haury_fabien.pdf), et le [rapport](https://fabienhaury.github.io/assets/rapport_ue2_haury_fabien.pdf) de ce projet.
 
-        ![Image](:project2_thumb.jpg)
 
-    # quote
-    - type: id_quote
-      project_name: "サンプルプロジェクト"
-      project_excerpt: "William Shakespeare"
-      #img: ":project1_thumb.jpg"
-      #img_title: "img title3"
-      date: "2021-05-27"
+# Projet 3
+    - type: id_statistics
+      project_name: "Introduction aux statistiques"
+      project_excerpt: "Les statistiques sont un outils indispensable en analyse de données."
+      img: ":statistics.jpg"
+      img_title: "Statistics"
+      date: "2022-07-06"
       post: |
-        Let me not to the marriage of true minds
-        Admit impediments. Love is not love
-        Which alters when it alteration finds,
-        Or bends with the remover to remove.
-        O no, it is an ever-fixed mark
-        That looks on tempests and is never shaken;
-        It is the star to every wand'ring barque,
-        Whose worth's unknown, although his height be taken.
-        Love's not Time's fool, though rosy lips and cheeks
-        Within his bending sickle's compass come;
-        Love alters not with his brief hours and weeks,
-        But bears it out even to the edge of doom.
-        If this be error and upon me proved,
-        I never writ, nor no man ever loved.
-    - type: id_quote
-      project_name: "サンプルプロジェクト"
-      project_excerpt: "Albert Einstein"
-      img: ":project2_thumb.jpg"
-      img_title: "img title4"
-      date: "2021-06-08"
+       # Objectifs de ce projet : 
+        - chi2 & mosaic plot
+        - Model linéaire et test apparié et non-apparié
+        - t test
+        - Correlation de Pearson/Spearman
+        - ANOVA sans et avec interaction
+        - Régression logistique
+        - Odd ratios
+        - Distribution de Poisson
+        - QQ plot
+        
+       ### Link
+        Ici, ce trouve le [notebook](https://fabienhaury.github.io/assets/notebook_ue3_haury_fabien.pdf), et le [rapport](https://fabienhaury.github.io/assets/rapport_ue3_haury_fabien.pdf) de ce projet.
+
+
+# Projet 4
+    - type: id_latex
+      project_name: "Rédaction d’un rapport d’analyse"
+      project_excerpt: "Analyser des données, c'est bien, mais être capable de rédiger un rapport pour synthétiser les résultats est tout aussi important."
+      img: ":latex_logo.png"
+      img_title: "LaTeX logo"
+      date: "2022-09-07"
       post: |
-        Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.
-    - type: id_quote
-      project_name: "サンプルプロジェクト"
-      project_excerpt: "Mae West"
-      img: ":project1_thumb.jpg"
-      img_title: "img title5"
-      date: "2021-08-20"
+       # Objectifs de ce projet :
+        - Recherche personnelle
+        - Se concentrer sur des questions de recherche
+        - Principe de méthode hypothético-déductive/Méthode exploratoire, etc.
+        - Dataset questionnaire Kaggle : Étude des influences socio-démographiques et socio-professionnelles sur le nombre de langages de programmation utilisés dans la vie quotidienne par les personnes pratiquant la Data Science.
+        
+       ### Link
+        ici, ce trouve le [notebook](https://fabienhaury.github.io/assets/notebook_ue4_haury_fabien.pdf), et le [rapport](https://fabienhaury.github.io/assets/rapport_ue4_haury_fabien.pdf) de ce projet.
+
+
+# Projet 5
+    - type: id_ml
+      project_name: "Réduction de dimensionnalité et techniques de clustering"
+      project_excerpt: "La réduction de dimensionnalité et techniques de clustering permet de réduire le coût en espace mémoire et le temps de calcul."
+      img: ":dimension_reduc.png"
+      img_title: "Dimensionnality reduction"
+      date: "2022-10-05"
       post: |
-        You only live once, but if you do it right, once is enough.
-    - type: id_quote
-      project_name: "サンプルプロジェクト"
-      project_excerpt: "Mahatma Gandhi "
-      img: ":project2_thumb.jpg"
-      img_title: "img title6"
-      date: "2021-12-20"
+       # Objectifs de ce projet :
+        - Machine learning non-supervisé
+         - Réduction de dimension
+          - ACP
+          - ACM
+         - Clustering
+          - k-means
+          - CAH
+          
+       ### Link
+        Ici, ce trouve le [notebook](https://fabienhaury.github.io/assets/notebook_ue5_haury_fabien.pdf) de ce projet.
+
+
+# Projet 6
+    - type: id_ml
+      project_name: "Introduction a l’apprentissage machine"
+      project_excerpt: "Le Machine Learning est une sous-catégorie de l’intelligence artificielle. Elle consiste à laisser des algorithmes découvrir des patterns , à savoir des motifs récurrents, dans les ensembles de données."
+      img: ":machine_learning.jpg"
+      img_title: "ML logo"
+      date: "2022-10-24"
       post: |
-        Be the change that you wish to see in the world.
+       # Objectifs de ce projet :
+        - Machine learning supervisé
+         - Arbre de classification 
+         - RandomForest
+         - Bagging/Bootstrapping
+         - Metriques
+         - Hyperparamètres & grid search
+         
+       ### Link
+        ici, ce trouve le [notebook](https://fabienhaury.github.io/assets/notebook_ue6_haury_fabien.pdf) de ce projet.
+
+# Projet 7
+    - type: id_bi
+      project_name: "Introduction à la Business Intelligence"
+      project_excerpt: "L'objectif de la Business Intelligence est de favoriser une meilleure prise de décision dans les domaines des affaires, des ventes, du marketing et des finances."
+      img: ":bi.png"
+      img_title: "BI logo"
+      date: "2022-12-08"
+      post: |
+       # Objectifs de ce projet : 
+        - Introduire le concept de BI
+        - Appliquer les concepts vus via Power BI
+        - Présenter des résultats à une audience
